# auto-distill

./: .gitignore  LICENSE  README.md  pyproject.toml
auto_distill/models/convolution/: __init__.py
auto_distill/models/convolution/separable/: bsconv.py  vanilla.py
auto_distill/scripts/classification/cifar/: cifar10.py
