# Project information: PyPI and Pip

[project]
name = 'auto-distill'
authors = [{name='Walber de Macedo Rodrigues'}]
license = {file='LICENSE'}
keywords = ['auto-distill', 'pyproject.toml']
classifiers = [
    'Development Status :: 1 - Planning',
    'Programming Language :: Python',
    'Topic :: Software Development',
    'Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.6',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]
readme = 'README.md'
dynamic = ['version', 'description']
requires-python = '>= 3.10.8'
dependencies = [

]

[project.urls]
Source = 'https://github.com/walbermr/auto-distill'
